--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^13.5.0",
     "kepler.gl": "^2.5.5",
     "node-polyfill-webpack-plugin": "^1.1.4",
     "react": "^17.0.2",
@@ -14,7 +11,25 @@
     "react-palm": "^3.3.8",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "swr": "^1.3.0",
     "web-vitals": "^2.1.4"
+  },
+  "resolutions": {
+    "@deck.gl/aggregation-layers": "8.2.0",
+    "@deck.gl/core": "8.2.0",
+    "@deck.gl/extensions": "8.2.0",
+    "@deck.gl/geo-layers": "8.2.0",
+    "@deck.gl/layers": "8.2.0",
+    "@deck.gl/mesh-layers": "8.2.0",
+    "@deck.gl/react": "8.2.0",
+    "deck.gl": "8.2.0",
+    "@luma.gl/shadertools": "8.2.0",
+    "@luma.gl/core": "8.2.0",
+    "@luma.gl/experimental": "8.2.0",
+    "@luma.gl/constants": "8.2.0",
+    "@luma.gl/engine": "8.2.0",
+    "@luma.gl/gltools": "8.2.0",
+    "@luma.gl/webgl": "8.2.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
